# metronix-memory

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pr-body-tmp.md  .pre-commit-config.yaml  .sha256sum  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.enterprise  INSTALL.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  connecting_to_agent.md  docker-compose.full.yml  docker-compose.yml  install.md  install.sh  manual.md  poc_dump.md  prompts.md  pyproject.toml  requirements.txt  uninstall.md  uninstall.sh
.claude/: settings.local.json
.cursor/plans/: oss_cleanup_plan_342802da.plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: CIdeploy.yml  Deploy DEV.yml  DeployENT.yml  Seed DPLAT Demo.yml  calean_install.yml  ci-status-checks.yml  docker-image-ent.yml  docker-image.yml  docker-worker.yml  installer.yml  k8s.yml  lint.yml  proxy.yml  release-installer.yml  security.yml  seed-dplat-demo.yml  service.yml  smdeploy.yml  tests.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.superpowers/sdd/: final-fix-report.md  task-1-final-hardening-report.md  task-1-hardening-report.md  task-2-report.md  task-3-race-fix-report.md  task-3-sse-parser-fix-report.md
benchmarks/longmemeval/: .env.benchmark.example  README.md  requirements-bench.txt  run.ps1  run.sh  setup.ps1  setup.sh
demo-data/jira/: DPLAT-001.json  DPLAT-002.json  DPLAT-003.json  DPLAT-004.json  DPLAT-005.json  DPLAT-006.json  DPLAT-007.json  DPLAT-008.json  DPLAT-009.json  DPLAT-010.json  DPLAT-011.json  DPLAT-012.json  DPLAT-013.json  DPLAT-014.json  DPLAT-015.json  DPLAT-016.json  DPLAT-017.json  DPLAT-018.json  DPLAT-019.json  DPLAT-020.json  DPLAT-021.json  DPLAT-022.json  DPLAT-023.json  DPLAT-024.json  DPLAT-025.json  DPLAT-026.json  DPLAT-027.json  DPLAT-028.json  DPLAT-029.json  DPLAT-030.json  DPLAT-031.json  DPLAT-032.json  DPLAT-033.json  DPLAT-034.json  DPLAT-035.json  DPLAT-036.json  DPLAT-037.json  DPLAT-038.json  DPLAT-039.json  DPLAT-040.json  (+46 more)
demo-data/skeletons/: admin-guide.yaml  marketing-onepager.json  marketing-onepager.yaml  user-guide.yaml
docker/: Dockerfile.metatron  healthchecks.sh
docs/: API.md  ARCHITECTURE.md  ASOC_API_CONTRACT.md  ASOC_INTEGRATION.md  BENCHMARKER_INTEGRATION.md  CONNECTORS.md  CONTRIBUTING.md  DECISIONS.md  DISTRIBUTION.md  GETTING_STARTED.md  HERMES_INTEGRATION.md  INSTALL.md  LEGACY.md  MCP_API.md  MEMORY_MCP_FOLLOWUPS.md  NEO4J_FOLLOWUP.md  OBSERVABILITY.md  OPENAI_COMPAT_ROADMAP.md  OPENCLAW_INTEGRATION.md  RAG_TRACE_FRONTEND.md  README.md  ROLLOUT_NOTES_2026-04-24.md  SKILLS.md  TODO.md  architecture-diagram.html  deploy-splade-service.md  deployment.md  eval-test-set.md  llm_call_sites_audit.md  memory-eval-harness.md  neo4j-inspect.md  postgres-inspect.md  publishing-installer.md  qdrant-inspect.md  redis-inspect.md
docs/adr/: 2026-04-25-metatron-strategy.md  2026-06-09-autosync-architecture.md
docs/benchmarks/: longmemeval.md
docs/examples/: python-sdk.md  rest-api.md
docs/guides/: agents-and-workspaces.md  connectors.md  ingestion.md  memory.md
docs/integrations/: atomic-chat.md  claude-code.md  claude-desktop.md  codex.md  cursor.md  hermes-agent.md  hermes.md  langchain.md  librechat.md  mcp-reference.md  n8n.md  nanobot.md  nanoclaw.md  ollama-local-models.md  openclaw.md  opencode.md  openwebui.md  pi.md  sdk-go.md  sdk-python.md
docs/internal/: DEVELOPMENT_PROCESS.md  devops-mcp-endpoint-setup.md
docs/product/: legacy.md  open-core-boundaries.md
docs/reference/: agent-memory-lifecycle.md  api-openai-compat.md  architecture.md  configuration.md
docs/specs/: 2026-06-24-data-export-design.md  (+3 more)
embedding_proxy/: Dockerfile  main.py  requirements.txt
examples/: README.md  memory_example.py  quickstart.sh  search_example.py  tasks.multi-agent-demo.json
frontend/: .gitignore  Caddyfile  Dockerfile  README.md  index.html  nginx-kb.conf  package-lock.json  package.json  vite.config.ts
install/: bootstrap.ps1  bootstrap.sh  docker-compose.yml  install.sh
installer/: README.md  pyproject.toml
installer/src/metatron_installer/: answers.py  cli.py  config.py  docker.py  envfile.py  preflight.py  profiles.py  prompter_questionary.py  runner.py  secrets.py  state.py  ui.py  wizard.py
installer/src/metronix_installer/: docker.py  runner.py
installer/tests/: test_answers.py  test_cli.py  test_cli_smoke.py  test_config.py  test_docker.py  test_envfile.py  test_launch.py  test_preflight.py  test_profiles.py  test_runner.py  test_secrets.py  test_state.py  test_wizard.py
installer/tests/fixtures/: answers_minimal.yaml
migrations/: env.py
scripts/: backfill_memory_qdrant_status_payload.py  backfill_memory_simhash.py  cleanup_mirror_review_entries.py  export_llm_dataset.py  gen.py  graph_process.py  graph_rebuild.py  grid_search_weights.py  install-bootstrap.sh  memgraph_syntax_test.py  memory_eval_harness.py  rag_eval_397.py  run_eval.py  run_memory_eval.py
seed/: build_dashboard.py  build_sources_index.py  doc_generator.py  list_workspaces.py  seed_metatron_direct.py  seed_metronix_direct.py  show_sources.py  test_full_pipeline.py  test_retrieval.py
standalone/hermes-memory-metronix/: .gitignore  README.md  TEST_PLAN.md  pyproject.toml
standalone/hermes-memory-metronix/.github/workflows/: ci.yml
standalone/hermes-memory-metronix/plugin/metronix/: __init__.py  client.py  plugin.yaml
standalone/hermes-memory-metronix/scripts/: migrate_wiki.py
standalone/hermes-memory-metronix/tests/: conftest.py
standalone/hermes-memory-metronix/tests/integration/: test_smoke_live.py
standalone/hermes-memory-metronix/tests/unit/: test_client.py  test_config_resolution.py  test_prefetch_and_write.py  test_prefetch_cache.py  test_provider_contract.py  test_real_abc_contract.py  test_wiki_migrate.py
tests/: conftest.py
(+1466 files in other folders)
