[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metatron-core"
version = "0.1.0"
description = "Open-source AI knowledge agent for teams"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Metatron Contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "httpx>=0.28,<1",
    "requests>=2.31,<3",
    "structlog>=24.4,<26",
    "qdrant-client>=1.12,<2",
    "neo4j>=5.25,<6",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "sqlalchemy>=2.0,<3",
    "cryptography>=44,<45",
    "PyJWT>=2.9,<3",
    "PyMuPDF>=1.24,<2",
    "python-docx>=1.1,<2",
    "openpyxl>=3.1,<4",
    "rapidfuzz>=3.6,<4",
    "cachetools>=5.3,<6",
    "ftfy>=6.1,<7",
    "markdownify>=0.13,<1",
    "pandas>=2.1,<3",
    "python-multipart>=0.0.9,<1",
    "mcp>=1.0,<2",
    "sse-starlette>=2.0,<4",
]

[project.optional-dependencies]
connectors = [
    "atlassian-python-api>=4.0,<5",
    "notion-client>=2.2,<3",
    "PyGithub>=2.5,<3",
    "google-api-python-client>=2.150,<3",
    "google-auth-oauthlib>=1.2,<2",
]
channels = [
    "aiogram>=3.15,<4",
    "slack-bolt>=1.21,<2",
    "discord.py>=2.4,<3",
]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pre-commit>=4.0,<5",
]

[project.scripts]
metatron = "metatron.app:main"
metatron-api = "metatron.api.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/metatron"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: integration tests (require running services)"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
